fix textarea wrapping and breaking (also in layout.css)

--- a/public/styles/tweetForm.css
+++ b/public/styles/tweetForm.css
@@ -34,6 +34,9 @@
 
 #tweet_text {
     border: none;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 #tweet_submit {
